# Naufrago_GameJam50

./: CMakeLists.txt  README.md
Main/: main.cpp
Resources/: Animation.cpp  Animation.h
Resources/Images/: background.aseprite  boat.aseprite  clouds.aseprite  clouds2.aseprite  clouds3.aseprite  man_sprite.aseprite
States/: Game.cpp  GameEnd.cpp  GameStart.cpp  GameStart.h  States.h
UI/: Button.cpp  Button.h
